# ai-client3

./: index.html  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: llm.rs  mcp.rs  mod.rs  skills.rs
src-tauri/src/llm/: mod.rs
src-tauri/src/mcp/: mod.rs
src-tauri/src/skills/: mod.rs
src/components/: Chat.tsx  Panel.tsx  Settings.tsx  Sidebar.tsx
src/services/: api.ts
src/stores/: index.ts
src/types/: index.ts
